--- a/Build3D.dproj
+++ b/Build3D.dproj
@@ -133,6 +133,7 @@
         <DCCReference Include="ModelMap.pas"/>
         <DCCReference Include="DebugClient.pas"/>
         <DCCReference Include="DrawToolSmooth.pas"/>
+        <DCCReference Include="DrawToolGrow.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
