--- a/Build3D.dproj
+++ b/Build3D.dproj
@@ -134,6 +134,7 @@
         <DCCReference Include="DebugClient.pas"/>
         <DCCReference Include="DrawToolSmooth.pas"/>
         <DCCReference Include="DrawToolGrow.pas"/>
+        <DCCReference Include="ModelExport.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
