--- a/Build3D.dproj
+++ b/Build3D.dproj
@@ -136,6 +136,7 @@
         <DCCReference Include="DrawToolGrow.pas"/>
         <DCCReference Include="ModelExport.pas"/>
         <DCCReference Include="DrawToolSel.pas"/>
+        <DCCReference Include="CopyParser.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
