--- a/Build3D.dproj
+++ b/Build3D.dproj
@@ -143,6 +143,10 @@
             <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Palette.pas"/>
+        <DCCReference Include="UnitTranspTexs.pas">
+            <Form>FormTranspTexs</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
